# indirect-call

./: CMakeLists.txt  README.md
exe/: CMakeLists.txt  bad_branching.cpp  main.cpp
include/: func.hpp
lib/: CMakeLists.txt  ind.cpp  ind.hpp
